# node-midi

./: .gitignore  .npmrc  CMakeLists.txt  binding.gyp  midi.js  package-lock.json  package.json
.circleci/: config.yml
src/: midi.cpp
src/lib/RtMidi/: RtMidi.cpp
